2011-10-07 Alessandro Scalzo <alessandro.scalzo@iit.it>
	Added icons and colors in iCubInterfaceGui.
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiClient/GuiRawData.cpp
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiClient/GuiRawData.h
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiClient/iCubBoardGui.h
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiClient/iCubInterfaceGuiClient.h
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiClient/iCubNetworkGui.h
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiClient/mainClient.cpp
        Added:
        * app/iCubInterfaceGui

2011-10-05 Alessandro Scalzo <alessandro.scalzo@iit.it>
    	Added error messages.
        * main/src/libraries/icubmod/dragonfly2/linux/FirewireCameraDC1394-DR2_2.cpp

2011-10-03 Ugo Pattacini <ugo.pattacini@iit.it>
        * main/src/modules/iKinHead moved under contrib/src/misc
          since it is superseded by Gaze Interface
        * main/src/modules/iKinArmCtrlIF moved under main/src/examples/cartesianInterfaceExample
          since it is only an example of using cartesian IF.

2011-09-29 Alessandro Scalzo <alessandro.scalzo@iit.it>
    * removed iCubInterfaceGui test program from repository
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiServer/CMakeLists.txt
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiServer/mainServer.cpp

2011-09-20 Randazzo Marco <marco.randazzo@iit.it>
	* main/src/modules/torqueObserver is now deprecated
	* main/src/modules/wrenchObserver is now deprecated

2011-09-18 Alessandro Scalzo <alessandro.scalzo@iit.it>
    * Committed bunch of changes to iCubInterfaceGui to 
      support logging mechanism for errors
        * main/src/libraries/iCubInterfaceGuiLib/RawData.h
        * main/src/libraries/iCubInterfaceGuiLib/iCubBoard.cpp
        * main/src/libraries/iCubInterfaceGuiLib/iCubBoard.h
        * main/src/libraries/iCubInterfaceGuiLib/iCubBoardChannel.cpp